fixed home page sizing, got rid of scrollbar

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,11 @@
 $bg-color: rgb(223, 217, 217);
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
 * {
   box-sizing: border-box;
 }
