--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -4,6 +4,7 @@ header {
   justify-content: space-between;
   padding-left: 25px;
   padding-right: 25px;
+  height: 90px;
 }
 
 header nav ul {
