--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,3 +1,7 @@
+main {
+  height: calc(100vh - 90px);
+}
+
 .section1 {
   height: 350px;
   max-width: 100%;
